--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -156,12 +156,10 @@
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
-  "5FINOY": "Workflow has parameter validation errors on the following operations: {invalidNodes}",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5OvGgn": "Body",
   "5SAQOb": "Authority",
-  "5aa76N": "Returns the first element in the array or string passed in",
   "5akc1Q": "Unsupported 'in' value : ''{value}'' in Parameter",
   "5b0sKi": "Returns true if an object, array, or string is empty",
   "5cPiWA": "Required. The name of the loop whose item you want.",
@@ -222,6 +220,7 @@
   "8eTWaf": "Rename",
   "8j+a0n": "With the asynchronous pattern, if the remote server indicates that the request is accepted for processing with a 202 (Accepted) response, the Logic Apps engine will keep polling the URL specified in the response's location header until reaching a terminal state.",
   "8luJ2j": "Create Connection Reference",
+  "8mDG0V": "The workflow has parameter validation errors in the following operations: {invalidNodes}",
   "8pPivj": "(UTC+11:00) Norfolk Island",
   "8ubEPi": "Request Options",
   "8wlfdo": "Suppress workflow headers on response",
@@ -920,12 +919,10 @@
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
-  "_5FINOY.comment": "Error message to show when there are invalid connections in the nodes.",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5OvGgn.comment": "The title of the body field in the static result query action",
   "_5SAQOb.comment": "Authority Label Display Name",
-  "_5aa76N.comment": "Label for description of custom first Function",
   "_5akc1Q.comment": "Error message for unsupported values. Do not remove the double single quotes around the placeholder text, as it is needed to wrap the placeholder text in single quotes.",
   "_5b0sKi.comment": "Label for description of custom empty Function",
   "_5cPiWA.comment": "Required string parameter to determine loop wanted",
@@ -986,6 +983,7 @@
   "_8eTWaf.comment": "Rename label",
   "_8j+a0n.comment": "description of asynchronous pattern setting",
   "_8luJ2j.comment": "Title for the create connection reference tab",
+  "_8mDG0V.comment": "Error message to show when there are invalid connections in the nodes.",
   "_8pPivj.comment": "Timezone value ",
   "_8ubEPi.comment": "title for request options setting",
   "_8wlfdo.comment": "title for workflow headers on response setting",
@@ -1589,6 +1587,7 @@
   "_cscezV.comment": "Required collection parameter to apply skip function on",
   "_ctI9Pp.comment": "Message on missing XSLT and attempting to test maps",
   "_d+MjsE.comment": "Error Message for Invalid Dictionary",
+  "_d020eg.comment": "Label for description of custom first Function",
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dBxX0M.comment": "Text for the \"Add Trigger\" page header",
@@ -2119,6 +2118,7 @@
   "cscezV": "Required. The collection to skip the first Count objects from.",
   "ctI9Pp": "Generate XSLT first before attempting to test mappings.",
   "d+MjsE": "Enter a valid dictionary.",
+  "d020eg": "Returns the first element from the passed-in array or string.",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
   "dBxX0M": "Add a trigger",
