--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -533,6 +533,7 @@
   "OnrO5/": "Select a managed identity",
   "P+7G62": "Heading 3",
   "P+mWgV": "Pfx",
+  "P/S+q5": "Required. One of the strings to combine into a single string.",
   "P/dnfK": "(UTC+06:00) Dhaka",
   "P2A5dB": "Required. This value is the number of integers that is in the array.",
   "P2rzqn": "Default value",
@@ -1297,6 +1298,7 @@
   "_OnrO5/.comment": "A placeholder for the managed identity dropdown",
   "_P+7G62.comment": "Heading 3 text",
   "_P+mWgV.comment": "Client Certificate Pfx Label Display Name",
+  "_P/S+q5.comment": "Required string parameter required to combine strings",
   "_P/dnfK.comment": "Time zone value ",
   "_P2A5dB.comment": "Required number parameter to identify number of integers in range function",
   "_P2rzqn.comment": "Default value",
@@ -1653,7 +1655,6 @@
   "_gIx5ys.comment": "label to make italic text for nonMac users",
   "_gKEaXI.comment": "Accessibility label for a button to copy all text in a value box",
   "_gKq3Jv.comment": "Label of a button to go to the previous failed page option",
-  "_gMhc5o.comment": "Required string parameter required to combine strings",
   "_gQt/0f.comment": "Label for conversion functions",
   "_gRUmiA.comment": "Info about token picker",
   "_gWyYg0.comment": "Time zone value ",
@@ -2184,7 +2185,6 @@
   "gIx5ys": "Format text as italic. Shortcut: Ctrl+I",
   "gKEaXI": "Copy the value of '{label}' to the clipboard",
   "gKq3Jv": "Previous failed",
-  "gMhc5o": "Required. The string to combine into a single string.",
   "gQt/0f": "Conversion functions",
   "gRUmiA": "Info",
   "gWyYg0": "(UTC+05:00) Ashgabat, Tashkent",
