--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -243,12 +243,10 @@
   "AEguAy": "Empty value",
   "AGCm1p": "Name",
   "AHB418": "Filter Actions",
-  "ANbEeQ": "Required. The name of the action whose values you want.",
   "AO6T9u": "Done",
   "AQ7Zxc": "Returns the index for a value's n-th occurrence in a string (case-insensitive, invariant culture).",
   "Af+Ve0": "(UTC+11:00) Bougainville Island",
   "AheXMN": "Select frequency.",
-  "Amz9+m": "Enter audience",
   "AnX5yC": "Username",
   "AoalgS": "Loading more results...",
   "ArTh0/": "Required. The string to encode into base64 representation.",
@@ -522,6 +520,7 @@
   "OOUSLP": "This function doesn't require any input.",
   "OOUTdW": "Loading all connectors...",
   "OSHNZ2": "Comment",
+  "OSP9JY": "Enter the audience.",
   "OVvieE": "Returns the results from the top-level actions in the specified scoped action, such as a For_each, Until, or Scope action.",
   "OdNhwc": "Ungroup",
   "OdoUEu": "Enable Static Result",
@@ -585,7 +584,6 @@
   "R/aiRy": "(UTC+12:00) Coordinated Universal Time+12",
   "RFjYpH": "Name",
   "RJes1w": "(UTC+04:00) Yerevan",
-  "RPSKbr": "Enter audience",
   "RX2Shm": "Required. The string that is split.",
   "RZ1MIN": "Switch to input entire array",
   "RbJNVk": "Schema",
@@ -742,6 +740,7 @@
   "YWOKlU": "Numbered List",
   "YZ5Kwe": "(UTC-04:00) Atlantic Time (Canada)",
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
+  "Ybzoim": "Required. The name of the action that has the values you want.",
   "YdQw4/": "Format text as italic. Shortcut: ⌘I",
   "YfwZJO": "Search Tips",
   "YgU88A": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
@@ -1008,12 +1007,10 @@
   "_AEguAy.comment": "Error message on expression evaluation",
   "_AGCm1p.comment": "Header for resource name",
   "_AHB418.comment": "Filter Actions",
-  "_ANbEeQ.comment": "Required string parameter to determine action wanted",
   "_AO6T9u.comment": "Done Label for button",
   "_AQ7Zxc.comment": "Label for description of custom nthIndexOf Function",
   "_Af+Ve0.comment": "Time zone value ",
   "_AheXMN.comment": "Placeholder for Frequency",
-  "_Amz9+m.comment": "MSI Audience Placeholder Text",
   "_AnX5yC.comment": "Username Label Display Name",
   "_AoalgS.comment": "Message to show when loading search results",
   "_ArTh0/.comment": "Required base64 string parameter to be converted using base64 function",
@@ -1287,6 +1284,7 @@
   "_OOUSLP.comment": "Function doesn't have or require inputs",
   "_OOUTdW.comment": "Message to show under the loading icon when loading connectors",
   "_OSHNZ2.comment": "Label for the comment textfield",
+  "_OSP9JY.comment": "MSI Audience Placeholder Text",
   "_OVvieE.comment": "Label for description of custom result Function",
   "_OdNhwc.comment": "Ungroup button",
   "_OdoUEu.comment": "Label for toggle to enable static result",
@@ -1350,7 +1348,6 @@
   "_R/aiRy.comment": "Time zone value ",
   "_RFjYpH.comment": "Name of current node",
   "_RJes1w.comment": "Time zone value ",
-  "_RPSKbr.comment": "Audience Placeholder Text",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
   "_RZ1MIN.comment": "Label for switching input to Text",
   "_RbJNVk.comment": "The title of the schema field in the static result parseJson action",
@@ -1507,6 +1504,7 @@
   "_YWOKlU.comment": "Numbered List text",
   "_YZ5Kwe.comment": "Time zone value ",
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
+  "_Ybzoim.comment": "Required string parameter to determine action wanted",
   "_YdQw4/.comment": "label to make italic text for Mac users",
   "_YfwZJO.comment": "Search tip header label",
   "_YgU88A.comment": "Time zone value ",
@@ -1662,6 +1660,7 @@
   "_gfBWfH.comment": "Label for Email type dynamically added parameter",
   "_ginGIZ.comment": "Time zone value ",
   "_gkY5ya.comment": "Delete dynamic parameter corresponding to this row",
+  "_gpUphl.comment": "Audience Placeholder Text",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_gvDMuq.comment": "Select a Batch Workflow resource",
   "_h+W3VW.comment": "Label for Number type dynamically added parameter",
@@ -2192,6 +2191,7 @@
   "gfBWfH": "Email",
   "ginGIZ": "(UTC-06:00) Guadalajara, Mexico City, Monterrey",
   "gkY5ya": "Delete",
+  "gpUphl": "Enter the audience.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "gvDMuq": "Select a Batch Workflow resource",
   "h+W3VW": "Number",
