fix(Designer): Connection request errors now show in UI (#2710)
Fixed error catch for connection 404, other fixes

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -113,6 +113,7 @@
   "2vnYre": "Add Action",
   "2xhbE1": "(UTC+11:00) Magadan",
   "2y24a/": "Save",
+  "3+TQMa": "Loading connection...",
   "30njcn": "Create Connection",
   "33+WHG": "Identifier",
   "34Nt/B": "alt text for button icon",
@@ -884,6 +885,7 @@
   "_2vnYre.comment": "Add action button text",
   "_2xhbE1.comment": "Timezone value ",
   "_2y24a/.comment": "Save button label",
+  "_3+TQMa.comment": "Text to show when the connection is loading",
   "_30njcn.comment": "Title for the create connection tab",
   "_33+WHG.comment": "Column header text for identifier",
   "_34Nt/B.comment": "alt text for button icon",
