--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -246,6 +246,7 @@
   "AHB418": "Filter Actions",
   "AO6T9u": "Done",
   "AQ7Zxc": "Returns the index for a value's n-th occurrence in a string (case-insensitive, invariant culture).",
+  "AYm28p": "Search",
   "Af+Ve0": "(UTC+11:00) Bougainville Island",
   "AheXMN": "Select frequency.",
   "AnX5yC": "Username",
@@ -1011,6 +1012,7 @@
   "_AHB418.comment": "Filter Actions",
   "_AO6T9u.comment": "Done Label for button",
   "_AQ7Zxc.comment": "Label for description of custom nthIndexOf Function",
+  "_AYm28p.comment": "Placeholder for search box that searches conditional parameters",
   "_Af+Ve0.comment": "Time zone value ",
   "_AheXMN.comment": "Placeholder for Frequency",
   "_AnX5yC.comment": "Username Label Display Name",
