Fix a few more references to parameters

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -246,7 +246,6 @@
   "AHB418": "Filter Actions",
   "AO6T9u": "Done",
   "AQ7Zxc": "Returns the index for a value's n-th occurrence in a string (case-insensitive, invariant culture).",
-  "AYm28p": "Search",
   "Af+Ve0": "(UTC+11:00) Bougainville Island",
   "AheXMN": "Select frequency.",
   "AnX5yC": "Username",
@@ -351,6 +350,7 @@
   "FXLR5M": "{hours, plural, one {# hour} other {# hours}}",
   "FYtDP0": "Enter an email address.",
   "FaBEfQ": "Tracked properties",
+  "Fcvgvg": "Search",
   "FiyQjU": "2",
   "FslNgF": "Status",
   "FxQ2Ts": "(UTC+02:00) Tripoli",
@@ -1012,7 +1012,6 @@
   "_AHB418.comment": "Filter Actions",
   "_AO6T9u.comment": "Done Label for button",
   "_AQ7Zxc.comment": "Label for description of custom nthIndexOf Function",
-  "_AYm28p.comment": "Placeholder for search box that searches conditional parameters",
   "_Af+Ve0.comment": "Time zone value ",
   "_AheXMN.comment": "Placeholder for Frequency",
   "_AnX5yC.comment": "Username Label Display Name",
@@ -1117,6 +1116,7 @@
   "_FXLR5M.comment": "A duration of time shown in hours",
   "_FYtDP0.comment": "The placeholder description for a newly inserted 'Email' parameter.",
   "_FaBEfQ.comment": "Label for the Tracked properties field in the settings section",
+  "_Fcvgvg.comment": "Default placeholder for search box that searches dropdown options",
   "_FiyQjU.comment": "Hour of the day",
   "_FslNgF.comment": "Column header text for status",
   "_FxQ2Ts.comment": "Time zone value ",
