--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -96,6 +96,7 @@
   "2TMGk7": "Managed identity",
   "2ZfzaY": "Select existing",
   "2cVEMV": "Returns a single value matching the key name from form-data or form-encoded action output",
+  "2gOfQI": "Existing schemas from",
   "2gzGrJ": "Required. The name of the action with a form-data or form-encoded response.",
   "2hrQOL": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
   "2kWLLc": "Start Time",
@@ -861,6 +862,7 @@
   "_2TMGk7.comment": "Managed Identity Label",
   "_2ZfzaY.comment": "Select existing option",
   "_2cVEMV.comment": "Label for description of custom formDataValue Function",
+  "_2gOfQI.comment": "Schema dropdown aria label",
   "_2gzGrJ.comment": "Required string parameter to identify action name for formDataValue function",
   "_2hrQOL.comment": "Time zone value ",
   "_2kWLLc.comment": "Label for Start time",
