--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -726,6 +726,7 @@
   "Xx/naD": "Required. The name of the action whose body outputs you want.",
   "Y/bcmG": "Password",
   "Y0H9aX": "More Info",
+  "Y5XAbg": "Select a Swagger Function App resource",
   "Y9kBz5": "Returns a binary representation of a data URI",
   "YABOLz": "Body Item",
   "YCFhzp": "Add children",
@@ -1491,6 +1492,7 @@
   "_Xx/naD.comment": "Required string parameter to determine action's body output wanted",
   "_Y/bcmG.comment": "Client Certificate Password Label Display Name",
   "_Y0H9aX.comment": "This is shown as an aria label on button as well as the tooltip that is shown after clicking the button",
+  "_Y5XAbg.comment": "Select a Swagger Function App resource",
   "_Y9kBz5.comment": "Label for description of custom dataUriToBinary Function",
   "_YABOLz.comment": "The title of the child item field in the static result query action",
   "_YCFhzp.comment": "Add the current node and its children to the map",
