--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -354,6 +354,7 @@
   "FXLR5M": "{hours, plural, one {# hour} other {# hours}}",
   "FYtDP0": "Enter an email address.",
   "FaBEfQ": "Tracked properties",
+  "Fcvgvg": "Search",
   "FiyQjU": "2",
   "FslNgF": "Status",
   "FxQ2Ts": "(UTC+02:00) Tripoli",
@@ -1127,6 +1128,7 @@
   "_FXLR5M.comment": "A duration of time shown in hours",
   "_FYtDP0.comment": "The placeholder description for a newly inserted 'Email' parameter.",
   "_FaBEfQ.comment": "Label for the Tracked properties field in the settings section",
+  "_Fcvgvg.comment": "Default placeholder for search box that searches dropdown options",
   "_FiyQjU.comment": "Hour of the day",
   "_FslNgF.comment": "Column header text for status",
   "_FxQ2Ts.comment": "Time zone value ",
