--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -204,6 +204,7 @@
   "8FjOSh": "Required. The object to check if it is greater or equal to the comparing object.",
   "8JEHiY": "Saturday",
   "8L+oIz": "Cannot render designer due to multiple triggers in definition.",
+  "8LhQeL": "Switch to code view mode",
   "8ND+Yc": "Please enable managed identity for the logic app.",
   "8SxNQC": "Overview",
   "8U0KPg": "Required. The string to be URI encoded.",
@@ -325,6 +326,7 @@
   "EZz5q7": "Required. The index of where to start extracting the substring.",
   "Ea/fr+": "Every {interval} days",
   "EaTGcN": "(UTC+01:00) West Central Africa",
+  "EdeHLs": "Switch to input entire array",
   "EdzoIs": "1",
   "EiRMD4": "Sign in to create a connection to {connectorDisplayName}.",
   "EjXdAm": "Password",
@@ -390,6 +392,7 @@
   "HSJLCu": "Headers",
   "HYhDYB": "(UTC-02:00) Coordinated Universal Time-02",
   "Hbqlzk": "Insert Expression",
+  "HfinO2": "Switch to detail inputs for array item",
   "HfrUId": "Please select a card to see the content",
   "HmcHoE": "Error fetching manifest",
   "HoQiVa": "Enter a valid datetime.",
@@ -586,7 +589,6 @@
   "RFjYpH": "Name",
   "RJes1w": "(UTC+04:00) Yerevan",
   "RX2Shm": "Required. The string that is split.",
-  "RZ1MIN": "Switch to input entire array",
   "RbJNVk": "Schema",
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
@@ -677,7 +679,6 @@
   "VUH9aj": "23",
   "VVfYvq": "Required. The number to divide by the Divisor.",
   "VXBWrq": "Comment",
-  "VXQbMw": "Switch to detail inputs for array item",
   "VZHick": "Duration",
   "Vaacox": "Run History",
   "VbMYd8": "Triggers tell your app when to start running. Each workflow needs at least one trigger.",
@@ -969,6 +970,7 @@
   "_8FjOSh.comment": "Required object parameter to check if greater than or equal to using greaterOrEqual function",
   "_8JEHiY.comment": "Day of the week",
   "_8L+oIz.comment": "This is an error message shown when a user tries to load a workflow defintion that contains Multiple entry points which isn't supported",
+  "_8LhQeL.comment": "Label for editor toggle button when in expanded mode",
   "_8ND+Yc.comment": "Error Message for disabled managed identity",
   "_8SxNQC.comment": "Button text for overview",
   "_8U0KPg.comment": "Required string parameter to be encoded using uriComponent function",
@@ -1090,6 +1092,7 @@
   "_EZz5q7.comment": "Required start index parameter to obtain substring",
   "_Ea/fr+.comment": "Recurrence schedule description every interval days",
   "_EaTGcN.comment": "Time zone value ",
+  "_EdeHLs.comment": "Label for editor toggle button when in expanded mode",
   "_EdzoIs.comment": "Hour of the day",
   "_EiRMD4.comment": "Description for creating an externally authenticated connection.",
   "_EjXdAm.comment": "OAuth Password Label Display Name",
@@ -1155,6 +1158,7 @@
   "_HSJLCu.comment": "The title of the headers field in the static result http action",
   "_HYhDYB.comment": "Time zone value ",
   "_Hbqlzk.comment": "Label for button to open expression token picker",
+  "_HfinO2.comment": "Label for editor toggle button when in collapsed mode",
   "_HfrUId.comment": "Empty Panel Content Message",
   "_HmcHoE.comment": "Error message when manifest fails to load",
   "_HoQiVa.comment": "Error validation message",
@@ -1351,7 +1355,6 @@
   "_RFjYpH.comment": "Name of current node",
   "_RJes1w.comment": "Time zone value ",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
-  "_RZ1MIN.comment": "Label for switching input to Text",
   "_RbJNVk.comment": "The title of the schema field in the static result parseJson action",
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
@@ -1442,7 +1445,6 @@
   "_VUH9aj.comment": "Hour of the day",
   "_VVfYvq.comment": "Required number parameter to be divided from in div function",
   "_VXBWrq.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
-  "_VXQbMw.comment": "Label for switching input to array",
   "_VZHick.comment": "Label text for request duration",
   "_Vaacox.comment": "Pivot item header text for run history",
   "_VbMYd8.comment": "Description of what Triggers are, on a tooltip about Triggers",
@@ -1587,10 +1589,10 @@
   "_ctI9Pp.comment": "Message on missing XSLT and attempting to test maps",
   "_cvp9VP.comment": "The title of the error code property within Error in the static result schema",
   "_cyEBus.comment": "Time zone value ",
-  "_d+MjsE.comment": "Error Message for Invalid Dictionary",
   "_d020eg.comment": "Label for description of custom first Function",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dBxX0M.comment": "Text for the \"Add Trigger\" page header",
+  "_dD8y1n.comment": "Label for editor toggle button when in collapsed mode",
   "_dDYCuU.comment": "Link text to open URL",
   "_dL9V5t.comment": "Text to show label for managed identity selector",
   "_dOpdsP.comment": "Update Expression",
@@ -1753,7 +1755,6 @@
   "_lUvgiW.comment": "Error message when having invalid authentication property types",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
-  "_lcxLiq.comment": "Error Message for Invalid Array",
   "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_lhL/KL.comment": "Normal text",
@@ -1869,6 +1870,7 @@
   "_qUWBUX.comment": "A duration of time shown in days",
   "_qc5S69.comment": "Label for description of custom length Function",
   "_qiIs4V.comment": "placeholder for retry interval setting",
+  "_qij+Vf.comment": "Label for editor toggle button when in collapsed mode",
   "_qnI4Y1.comment": "Required string parameter to be converted using int function",
   "_qr1lLG.comment": "Body text for the input type mismatch card",
   "_qrxi0L.comment": "description of asynchronous response setting",
@@ -2022,6 +2024,7 @@
   "_xSSfKC.comment": "Time zone value ",
   "_xV/oyK.comment": "Required parameter for new/existing property value in setProperty function",
   "_xV4Koe.comment": "Label for code tab",
+  "_xXVu2y.comment": "Label for editor toggle button when in expanded mode",
   "_xYyPR8.comment": "Label for description of custom uriPath Function",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
   "_xwD1VZ.comment": "Loading inputs text",
@@ -2118,10 +2121,10 @@
   "ctI9Pp": "Generate XSLT first before attempting to test mappings.",
   "cvp9VP": "Error code",
   "cyEBus": "(UTC-04:00) Cuiaba",
-  "d+MjsE": "Enter a valid dictionary.",
   "d020eg": "Returns the first element from the passed-in array or string.",
   "dBWIjR": "Schema is missing required inputs",
   "dBxX0M": "Add a trigger",
+  "dD8y1n": "Switch to key value mode",
   "dDYCuU": "Learn more",
   "dL9V5t": "Managed identity",
   "dOpdsP": "Update",
@@ -2284,7 +2287,6 @@
   "lUvgiW": "The type for '{0}' is '{1}'.",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
-  "lcxLiq": "Please enter a valid array",
   "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
   "lhL/KL": "Normal",
@@ -2400,6 +2402,7 @@
   "qUWBUX": "{days, plural, one {# day} other {# days}}",
   "qc5S69": "Returns the number of elements in an array or string",
   "qiIs4V": "Example: {example}",
+  "qij+Vf": "Switch to default view mode",
   "qnI4Y1": "Required. The value that is converted to an integer.",
   "qr1lLG": "Function ''{nodeName}'' has an input with a mismatched type",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
@@ -2553,6 +2556,7 @@
   "xSSfKC": "(UTC-03:00) Saint Pierre and Miquelon",
   "xV/oyK": "Required. The name of the new or existing property.",
   "xV4Koe": "Code",
+  "xXVu2y": "Switch to text mode",
   "xYyPR8": "Returns the path from a URI. If path is not specified, returns '/'",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
   "xwD1VZ": "Loading inputs",
